OO-4934: search only participant's courses, extra time in minutes...